<resources>
    <string name="app_name">BTTH4_QLSV</string>
    <string name="title">QUẢN LÝ SINH VIÊN</string>
    <string name="txMaLop">Mã lớp</string>
    <string name="txTenLop">Tên lớp</string>
    <string name="txSiSo">Sỉ số</string>
    <string name="Insert">Thêm</string>
    <string name="delete">Xóa</string>
    <string name="update">Sửa</string>
    <string name="query">Truy vấn</string>
</resources>